--- a/notebooks/jupyter/Raster_clip.ipynb
+++ b/notebooks/jupyter/Raster_clip.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,12 +34,49 @@
     "\n",
     "temp_data = '../../temp_data/'\n",
     "raster_out = '../../data/interim/'\n",
-    "raster_in = '../../data/raw/'"
+    "raster_in = '../../data/'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pre = rasterio.open(raster_in+'GHS_POP_GPW42015_GLOBE_R2015A_54009_1k_v1_0.tif')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'count': 1,\n",
+       " 'crs': CRS({'proj': 'moll', 'lon_0': 0, 'x_0': 0, 'y_0': 0, 'ellps': 'WGS84', 'units': 'm', 'no_defs': True}),\n",
+       " 'driver': 'GTiff',\n",
+       " 'dtype': 'float32',\n",
+       " 'height': 15236,\n",
+       " 'nodata': None,\n",
+       " 'transform': Affine(1000.0, 0.0, -17619594.54744353,\n",
+       "       0.0, -1000.0, 8751029.46186849),\n",
+       " 'width': 35497}"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pre.meta"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,125 +99,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "raster = raster_in+'LandScan-Global-2015/lspop2015/w001001.adf'\n",
-    "shape = temp_data+'20190114_Africabase.shp'\n",
-    "file = raster_out+'LandScan2015_w001001_Clip.tif'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 64,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "raster_clip(raster, shape, file)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 65,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'driver': 'GTiff',\n",
-       " 'dtype': 'int32',\n",
-       " 'nodata': -2147483647.0,\n",
-       " 'width': 10688,\n",
-       " 'height': 8684,\n",
-       " 'count': 1,\n",
-       " 'crs': CRS({'init': 'epsg:4326'}),\n",
-       " 'transform': Affine(0.0083333333333333, 0.0, -25.466666666667294,\n",
-       "        0.0, -0.0083333333333333, 37.441666666666165)}"
-      ]
-     },
-     "execution_count": 65,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "test = rasterio.open(file)\n",
-    "test.meta"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "GHS2000 = rasterio.open(raster)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'driver': 'GTiff',\n",
-       " 'dtype': 'float32',\n",
-       " 'nodata': 3.4028234663852886e+38,\n",
-       " 'width': 35336,\n",
-       " 'height': 17071,\n",
-       " 'count': 1,\n",
-       " 'crs': CRS({'init': 'epsg:4326'}),\n",
-       " 'transform': Affine(0.010152911316938011, 0.0, -179.73259215057786,\n",
-       "        0.0, -0.008179005658007374, 83.63964763391378)}"
-      ]
-     },
-     "execution_count": 49,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "GHS2000.meta"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ESRI2016 = rasterio.open(data_in+'ESRI_WPE_2016_Pop/WPE_1KM_2016_Pop.tif')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'driver': 'GTiff',\n",
-       " 'dtype': 'int32',\n",
-       " 'nodata': -2147483647.0,\n",
-       " 'width': 40074,\n",
-       " 'height': 14285,\n",
-       " 'count': 1,\n",
-       " 'crs': CRS({'init': 'epsg:4326'}),\n",
-       " 'transform': Affine(0.008983196, 0.0, -179.99191516916386,\n",
-       "        0.0, -0.008983196, 73.32432599999953)}"
-      ]
-     },
-     "execution_count": 40,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ESRI2016.meta"
+    "raster = raster_in+'GHS_POP_GPW42015_GLOBE_R2015A_54009_1k_v1_0.tif'\n",
+    "shape = temp_data+'20190114_Africabase_EPSG54009.shp'\n",
+    "file = raster_in+'GHS_POP_GPW42015_GLOBE_R2015A_54009_1k_v1_0_Clip.tif'"
    ]
   }
  ],
