--- a/notebooks/jupyter/Raster_clip.ipynb
+++ b/notebooks/jupyter/Raster_clip.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,79 +34,6 @@
     "\n",
     "temp_data = '../../temp_data/'\n",
     "raster_out = '../../data/interim/'\n",
-    "raster_in = '../../data/'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pre = rasterio.open(raster_in+'GHS_POP_GPW42015_GLOBE_R2015A_54009_1k_v1_0.tif')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'count': 1,\n",
-       " 'crs': CRS({'proj': 'moll', 'lon_0': 0, 'x_0': 0, 'y_0': 0, 'ellps': 'WGS84', 'units': 'm', 'no_defs': True}),\n",
-       " 'driver': 'GTiff',\n",
-       " 'dtype': 'float32',\n",
-       " 'height': 15236,\n",
-       " 'nodata': None,\n",
-       " 'transform': Affine(1000.0, 0.0, -17619594.54744353,\n",
-       "       0.0, -1000.0, 8751029.46186849),\n",
-       " 'width': 35497}"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "pre.meta"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def raster_clip(raster, shape, file):\n",
-    "    with fiona.open(shape, \"r\") as shapefile:\n",
-    "        geoms = [feature[\"geometry\"] for feature in shapefile]\n",
-    "\n",
-    "    with rasterio.open(raster) as src:\n",
-    "        out_image, out_transform = mask(src, geoms, crop=True)\n",
-    "        out_meta = src.meta.copy()\n",
-    "\n",
-    "    out_meta.update({\"driver\": \"GTiff\",\n",
-    "                     \"height\": out_image.shape[1],\n",
-    "                     \"width\": out_image.shape[2],\n",
-    "                     \"transform\": out_transform})\n",
-    "\n",
-    "    with rasterio.open(file, \"w\", **out_meta) as dest:\n",
-    "        dest.write(out_image)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "raster = raster_in+'GHS_POP_GPW42015_GLOBE_R2015A_54009_1k_v1_0.tif'\n",
-    "shape = temp_data+'20190114_Africabase_EPSG54009.shp'\n",
-    "file = raster_in+'GHS_POP_GPW42015_GLOBE_R2015A_54009_1k_v1_0_Clip.tif'"
-   ]
     "raster_in = '../../data/raw/'"
    ]
   },
@@ -141,10 +68,48 @@
    "source": [
     "raster = raster_in+'ghs-pop/GHS_POP_GPW42015_GLOBE_R2015A_54009_1k_v1_0/GHS_POP_GPW42015_GLOBE_R2015A_54009_1k_v1_0.tif'\n",
     "shape = temp_data+'20190114_Africabase_EPSG54009.shp'\n",
-    "file = raster_out+'GHS_POP_GPW42015_GLOBE_R2015A_54009_1k_v1_0_Clip.tif'\n
+    "file = raster_out+'GHS_POP_GPW42015_GLOBE_R2015A_54009_1k_v1_0_Clip.tif'\n",
+    "\n"
+   ]
   },
   {
-   "cell_t
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "raster_clip(raster, shape, file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'driver': 'GTiff',\n",
+       " 'dtype': 'int32',\n",
+       " 'nodata': -2147483647.0,\n",
+       " 'width': 10688,\n",
+       " 'height': 8684,\n",
+       " 'count': 1,\n",
+       " 'crs': CRS({'init': 'epsg:4326'}),\n",
+       " 'transform': Affine(0.0083333333333333, 0.0, -25.466666666667294,\n",
+       "        0.0, -0.0083333333333333, 37.441666666666165)}"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test = rasterio.open(file)\n",
+    "test.meta"
+   ]
+  }
  ],
  "metadata": {
   "kernelspec": {
