--- a/notebooks/jupyter/New_Raster_Mask.ipynb
+++ b/notebooks/jupyter/New_Raster_Mask.ipynb
@@ -141,25 +141,44 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# By Ryan Avery \n",
-    "\n",
-    "import numpy as np\n",
-    "import scipy.ndimage as ndimage\n",
-    "\n",
-    "def remove_isolated_pixels(mask1, mask2, struct=np.ones((3,3))):\n",
+    "def raster_gpd(array, raster, crs):\n",
+    "    \"\"\" \n",
+    "    function takes an np array, raster\n",
+    "    and returns polygons from the np array in the raster CRS\n",
     "    \"\"\"\n",
-    "    Unions two binary numpy arrays of the same shape.\n",
-    "    Takes this unioned array and removes solitary pixels.\n",
-    "    Struct should be a binary 3x3 numpy array to define\n",
-    "    connectivity rule. Binary mask arrays should be the \n",
-    "    shape.\n",
+    "    for geom, val in rasterio.features.shapes(array, transform = raster.transform):\n",
+    "\n",
+    "        # Transform shapes from the dataset's own coordinate\n",
+    "        # reference system to CRS84 (EPSG:4326). Removed # WGS84 (EPSG 4326) \n",
+    "        geom = rasterio.warp.transform_geom(raster.crs, crs, geom, precision=6) \n",
+    "\n",
+    "    # turn geom into Polygon object from shapely    \n",
+    "    # Polygon(geom['coordinates'][0])\n",
+    "    poly_gdf = gpd.GeoDataFrame()\n",
+    "    for i, poly in enumerate(geom['coordinates']):\n",
+    "        poly_gdf.loc[i,'geometry']= Polygon(poly)\n",
+    "    \n",
+    "    return poly_gdf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def raster_write(meta, array, file_out):\n",
+    "    \"\"\" function to write out a raster file with an np array\n",
+    "    requires meta data for raster, np array & file out path and name\n",
     "    \"\"\"\n",
-    "    union_arr = np.logical_or(mask1, mask2)*1\n",
-    "    id_regions, num_ids = ndimage.label(union_arr, structure=struct)\n",
-    "    id_sizes = np.array(ndimage.sum(union_arr, id_regions, range(num_ids + 1)))\n",
-    "    area_mask = (id_sizes == 1)\n",
-    "    union_arr[area_mask[id_regions]] = 0\n",
-    "    return union_arr"
+    "    \n",
+    "    kwargs = meta\n",
+    "\n",
+    "    # Update kwargs (change in data type)\n",
+    "    kwargs.update(dtype=rasterio.float32, count = 1)\n",
+    "\n",
+    "    with rasterio.open(file_out, 'w', **kwargs) as dst:\n",
+    "        dst.write_band(1, array.astype(rasterio.float32))"
    ]
   },
   {
@@ -175,14 +194,42 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file = 'GHS_POP_GPW42000_GLOBE_R2015A_54009_1k_v1_0_Clip.tif'\n",
-    "raster = rasterio.open(raster_interim+file)\n",
-    "crs = raster.crs"
+    "# file = 'GHS_POP_GPW42015_GLOBE_R2015A_54009_1k_v1_0_Clip.tif'\n",
+    "# raster = rasterio.open(raster_raw+file)\n",
+    "# crs = raster.crs"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'count': 1,\n",
+       " 'crs': CRS({'proj': 'moll', 'lon_0': 0, 'x_0': 0, 'y_0': 0, 'ellps': 'WGS84', 'units': 'm', 'no_defs': True}),\n",
+       " 'driver': 'GTiff',\n",
+       " 'dtype': 'float32',\n",
+       " 'height': 8717,\n",
+       " 'nodata': None,\n",
+       " 'transform': Affine(1000.0, 0.0, -2482594.5474435315,\n",
+       "       0.0, -1000.0, 4502029.461868489),\n",
+       " 'width': 8624}"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "raster.meta"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,24 +238,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                                            geometry\n",
-      "0  POLYGON ((-2482594.547444 4502029.461868, -248...\n",
-      "1  POLYGON ((1719405.452556 -4175970.538132, 1720...\n",
-      "2  POLYGON ((856405.452556 4489029.461868, 856405...\n",
-      "3  POLYGON ((1729405.452556 -4135970.538132, 1729...\n",
-      "4  POLYGON ((1781405.452556 -4168970.538132, 1781...\n",
-      "5  POLYGON ((1709405.452556 -4133970.538132, 1709...\n",
-      "40697\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(poly_gdf1500.head(6))\n",
     "print(len(poly_gdf1500))"
@@ -216,24 +248,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                                            geometry\n",
-      "1  POLYGON ((1719405.452556 -4175970.538132, 1720...\n",
-      "2  POLYGON ((856405.452556 4489029.461868, 856405...\n",
-      "3  POLYGON ((1729405.452556 -4135970.538132, 1729...\n",
-      "4  POLYGON ((1781405.452556 -4168970.538132, 1781...\n",
-      "5  POLYGON ((1709405.452556 -4133970.538132, 1709...\n",
-      "6  POLYGON ((1708405.452556 -4155970.538132, 1709...\n",
-      "40696\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# drop first row, which is bounding box of Africa and the write \n",
     "poly_gdf1500 = poly_gdf1500.drop(poly_gdf1500.index[0], axis = 0)\n",
@@ -243,13 +260,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# write out polygons \n",
-    "\n",
-    "poly_gdf1500.to_file(temp_data+'GHS_POP_GPW42000_GLOBE_R2015A_54009_1k_v1_0_Clip_1500.shp', driver='ESRI Shapefile')"
+    "# poly_gdf1500.to_file(temp_data+'GHS_POP_GPW42000_GLOBE_R2015A_54009_1k_v1_0_Clip_1500.shp', driver='ESRI Shapefile')"
    ]
   },
   {
@@ -261,73 +277,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# By Ryan Avery \n",
+    "import os\n",
     "\n",
-    "import numpy as np\n",
-    "import scipy.ndimage as ndimage\n",
+    "os.getcwd()\n",
+    "os.chdir('/home/cascade/tana-crunch-cascade/projects/NTL/')\n",
+    "os.getcwd()\n",
     "\n",
-    "def remove_isolated_pixels(mask1, mask2, struct=np.ones((3,3))):\n",
-    "    \"\"\"\n",
-    "    Unions two binary numpy arrays of the same shape.\n",
-    "    Takes this unioned array and removes solitary pixels.\n",
-    "    Struct should be a binary 3x3 numpy array to define\n",
-    "    connectivity rule. Binary mask arrays should be the \n",
-    "    shape.\n",
-    "    \"\"\"\n",
-    "    union_arr = np.logical_or(mask1, mask2)*1\n",
-    "    id_regions, num_ids = ndimage.label(union_arr, structure=struct)\n",
-    "    id_sizes = np.array(ndimage.sum(union_arr, id_regions, range(num_ids + 1)))\n",
-    "    area_mask = (id_sizes == 1)\n",
-    "    union_arr[area_mask[id_regions]] = 0\n",
-    "    return union_arr"
+    "from src import raster_funcs"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Let's try to make polygons\n",
-    "\n",
-    "def raster_poly(raster, band, crs):\n",
-    "    \"\"\"Fucntion makes ploygons for of raster returns dict of polygons\"\"\"\n",
-    "\n",
-    "    mask = raster.read(band)\n",
-    "    \n",
-    "    # Extract feature shapes and values from the array.\n",
-    "    for geom, val in rasterio.features.shapes(mask, transform=raster.transform):\n",
-    "        \n",
-    "        # Transform shapes from the dataset's own coordinate\n",
-    "        # reference system to CRS84 (EPSG:4326).\n",
-    "        geom = rasterio.warp.transform_geom(raster.crs, crs, geom, precision=6) # WGS84 (EPSG 4326)\n",
-    "    \n",
-    "    # turn geom into Polygon object from shapely    \n",
-    "    # Polygon(geom['coordinates'][0])\n",
-    "    poly_gdf = gpd.GeoDataFrame()\n",
-    "    for i, poly in enumerate(geom['coordinates']):\n",
-    "        poly_gdf.loc[i,'geometry']= Polygon(poly)\n",
-    "\n",
-    "    return poly_gdf"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "file = rasterio.open(raster_raw+'XXX')\n",
+    "file = rasterio.open('data/GHS_POP_GPW42015_GLOBE_R2015A_54009_1k_v1_0_Clip.tif')\n",
     "crs = file.crs"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -337,49 +312,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "mask1000c600 = raster_funcs.remove_isolated_pixels(mask1500, mask300)"
+    "mask1500c300 = raster_funcs.remove_isolated_pixels(mask1500, mask300)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "poly_gdf_1000c600 = raster_poly(mask1000c600, 1, crs)\n",
-    "print((poly_gdf_1000c600.head(6)))\n",
-    "print(len(poly_gdf_1000c600))"
+    "poly_gdf_1500c300 = raster_gpd(mask1500c300, file, crs)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                                            geometry\n",
+      "0  POLYGON ((-2482594.547444 4502029.461868, -248...\n",
+      "1  POLYGON ((1776405.452556 -4197970.538132, 1778...\n",
+      "2  POLYGON ((856405.452556 4490029.461868, 856405...\n",
+      "3  POLYGON ((1767405.452556 -4161970.538132, 1767...\n",
+      "4  POLYGON ((1717405.452556 -4175970.538132, 1717...\n",
+      "5  POLYGON ((1729405.452556 -4158970.538132, 1730...\n",
+      "46075\n"
+     ]
+    }
+   ],
+   "source": [
+    "print((poly_gdf_1500c300.head(6)))\n",
+    "print(len(poly_gdf_1500c300))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                                            geometry\n",
+      "1  POLYGON ((1776405.452556 -4197970.538132, 1778...\n",
+      "2  POLYGON ((856405.452556 4490029.461868, 856405...\n",
+      "3  POLYGON ((1767405.452556 -4161970.538132, 1767...\n",
+      "4  POLYGON ((1717405.452556 -4175970.538132, 1717...\n",
+      "5  POLYGON ((1729405.452556 -4158970.538132, 1730...\n",
+      "6  POLYGON ((1703405.452556 -4154970.538132, 1708...\n",
+      "46074\n"
+     ]
+    }
+   ],
    "source": [
     "# drop first row, which is bounding box of Africa\n",
-    "poly_gdf_1000c600_drop = test_poly.drop(test_poly.index[0], axis = 0)\n",
-    "print((poly_gdf_1000c600_drop.head(6)))\n",
-    "print(len(poly_gdf_1000c600_drop))"
+    "poly_gdf_1500c300_drop = poly_gdf_1500c300.drop(poly_gdf_1500c300.index[0], axis = 0)\n",
+    "print((poly_gdf_1500c300_drop.head(6)))\n",
+    "print(len(poly_gdf_1500c300_drop))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# poly_gdf_1000c600_drop.to_file(temp_data+'.shp', driver='ESRI Shapefile')"
+    "poly_gdf_1500c300_drop.to_file('GHS_POP_GPW42015_GLOBE_R2015A_54009_1k_v1_0_Clip_1500c300.shp', driver='ESRI Shapefile')"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -393,7 +406,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
