--- a/notebooks/jupyter/Raster_clip.ipynb
+++ b/notebooks/jupyter/Raster_clip.ipynb
@@ -62,19 +62,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "raster = raster_in+'ghs-pop/GHS_POP_GPW42015_GLOBE_R2015A_54009_1k_v1_0/GHS_POP_GPW42015_GLOBE_R2015A_54009_1k_v1_0.tif'\n",
-    "shape = temp_data+'20190114_Africabase_EPSG54009.shp'\n",
-    "file = raster_out+'GHS_POP_GPW42015_GLOBE_R2015A_54009_1k_v1_0_Clip.tif'\n",
-    "\n"
+    "raster = raster_in+'LandScan-Global-2015/lspop2015/w001001.adf'\n",
+    "shape = temp_data+'20190114_Africabase.shp'\n",
+    "file = raster_out+'LS15_w001001_Clip.tif'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'driver': 'AIG',\n",
+       " 'dtype': 'int32',\n",
+       " 'nodata': -2147483647.0,\n",
+       " 'width': 43200,\n",
+       " 'height': 21600,\n",
+       " 'count': 1,\n",
+       " 'crs': CRS({'init': 'epsg:4326'}),\n",
+       " 'transform': Affine(0.0083333333333333, 0.0, -180.0,\n",
+       "        0.0, -0.0083333333333333, 89.99999999999929)}"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test = rasterio.open(raster)\n",
+    "test.meta"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
